Bug 463363 - KGet fails to start if the torrent file is deleted
Summary: KGet fails to start if the torrent file is deleted
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-22 21:59 UTC by Gergely HORVÁTH
Modified: 2023-01-01 12:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gergely HORVÁTH 2022-12-22 21:59:40 UTC
Opening KGet
Starting a download
Let it finish
Remove the a torrent
KGet crashes
KGet does not start, but throws an error, that the torrent file is not found

A graceful crash would be better UX

```sh
$ pacman -Qs kget
local/kget 22.08.3-1 (kde-applications kde-network)
    Download Manager
```

Operating System: Arch Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Kernel Version: 6.0.11-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × 11th Gen Intel® Core™ i7-11370H @ 3.30GHz
Memory: 15,4 GiB of RAM
Graphics Processor: Mesa Intel® Xe Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO InfinityBook Pro 14 Gen6
Comment 1 Bug Janitor Service 2022-12-28 14:54:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kget/-/merge_requests/44
Comment 2 Fushan Wen 2023-01-01 12:18:34 UTC
Git commit 3f5aaea7cc86149e96e0f6e714ad0d69c1327070 by Fushan Wen.
Committed on 01/01/2023 at 12:18.
Pushed by fusionfuture into branch 'master'.

bittorrent: select a new torrent file when old file does not exist

This makes it possible to select a new torrent file and continue the
download after the original torrent file does not exist.

M  +26   -1    transfer-plugins/bittorrent/bttransfer.cpp
M  +9    -0    transfer-plugins/bittorrent/bttransfer.h

https://invent.kde.org/network/kget/commit/3f5aaea7cc86149e96e0f6e714ad0d69c1327070