bittorrent: select a new torrent file when old file does not exist

This makes it possible to select a new torrent file and continue the
download after the original torrent file does not exist.

BUG: 463363